# vimpdb

./: .gitignore  .travis.yml  CHANGES.txt  CREDITS.txt  MIT-LICENSE.txt  README.rst  README.txt  TODO.txt  manual_test.py  setup.cfg  setup.py  tox.ini
src/vimpdb/: __init__.py  bbbconfig.py  config.py  controller.py  debugger.py  errors.py  proxy.py  server.py  testing.py  vimpdb.vim
src/vimpdb/tests/: test_config.py  test_debugger.py  test_proxy.py
src/vimpdb/tests/scripts/: communicator.py  compatiblevim.py  incompatiblevim.py  nopython.py  noserver.py  rightserverlist.py  wrongserverlist.py
