[metadata]
name = vimpdb
version = 0.4.5dev
author = Godefroid Chapelle 
author_email = gotcha@bubblenet.be 
summary = Vim and Pdb integration
description_file = README.rst
keywords = pdb vim
home_page = https://github.com/gotcha/vimpdb 
project_url =
    Source repository, https://github.com/gotcha/vimpdb
requires_dist =
    vim_bridge
requires_python = 2.4 2.5 2.6 2.7
license = MIT
classifier =
    Programming Language :: Python :: 2.4
    Programming Language :: Python :: 2.5
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Topic :: Software Development :: Debuggers
    Topic :: Text Editors

[files]
packages =
        src/vimpdb:vimpdb
#scripts =
extra_files =
        setup.py
